--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -1,3 +1,13 @@
+.header{
+	text-align: center;
+	font-family: monospace;
+	
+}
+
+a:link {
+	text-decoration: none;
+}
+
 .campo {
 		margin-bottom: 1em;
 	}
@@ -24,8 +34,5 @@ fieldset.group .campo {
 	margin:  0 auto;
 }
 
-.header{
-	text-align: center;
-	font-family: monospace;
-	
-}
+
+
