--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -8,6 +8,37 @@ a:link {
 	text-decoration: none;
 }
 
+.post-categ{
+	margin-bottom: 40px;
+	font-family: monospace;
+}
+
+.post-categ a:link {
+	background: #f2f2f2;
+	display: inline-block;
+	line-height: 16px;
+	color: #999;
+	padding: 3px 7px;
+	margin: 0 5px 2px 0;
+}
+
+.post-categ a:hover {
+	background: #f0f0f0;
+	display: inline-block;
+	line-height: 16px;
+	color: #999;
+	padding: 3px 7px;
+	margin: 0 5px 2px 0;
+}
+
+.post-texto{
+	font-family: sans-serif;
+	font-size: 12pt;
+	text-align: justify;
+	line-height: 1.5em;
+	color: gray;
+}
+
 .campo {
 		margin-bottom: 1em;
 	}
